All known bugs now squashed. Final runthroughs of game modes.

--- a/test/css/addins.less
+++ b/test/css/addins.less
@@ -174,13 +174,13 @@ background: -moz-linear-gradient(top,  #165181,  #3b86c4); /* for firefox 3.6+ *
                 }
             ul{
             
-                width:100%;
+                width:96%;
                 float:left;
                 margin : 0 0 0 0;
                 list-style:none;
                     li{
                         border-top:2px solid #5f5f5f;
-                        width:100%;
+                        //width:100%;
                         float:left;
                             a{
                                 color:inherit;
